feat: Introduce About dialog, flexible theming, and refined UI updates
- Added `AboutDialog` for displaying application metadata and credits.
- Implemented new `Theme` utility for seamless light/dark theme switching.
- Refined toolbar with dialog-based team and environment pickers.
- Enhanced context-menu, sidebar, and tree UI styling for better consistency.
- Upgraded build scripts with jlink adjustments and macOS naming fixes (Postbaby).